{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 32,
  "lineage": "5c013c9a-6b73-708a-a481-f395f2a7bbe9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:network-acl/acl-0f9921b63571f2afb",
            "default_network_acl_id": "acl-0f9921b63571f2afb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f9921b63571f2afb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "816069152945",
            "subnet_ids": [
              "subnet-012b56bb773477eac",
              "subnet-016c03f70a9869e3d",
              "subnet-05977cfce7c9d4e24",
              "subnet-06edf3de4d1f29114",
              "subnet-07b892142b564cdca",
              "subnet-091d66a95d8e1f0c0",
              "subnet-0a0452e8e4a7975a8",
              "subnet-0b9fd2cb372db11a2",
              "subnet-0e0786633c3bfd872"
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:route-table/rtb-07e6abde61d931c64",
            "default_route_table_id": "rtb-07e6abde61d931c64",
            "id": "rtb-07e6abde61d931c64",
            "owner_id": "816069152945",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:security-group/sg-0534549f5b150e441",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0534549f5b150e441",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "816069152945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-default",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00484f3159c93d94b",
            "arn": "arn:aws:ec2:eu-central-1:816069152945:elastic-ip/eipalloc-00484f3159c93d94b",
            "association_id": "eipassoc-0f35962a7c8723514",
            "domain": "vpc",
            "id": "eipalloc-00484f3159c93d94b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d80d561ee65700dc",
            "private_dns": "ip-10-0-1-137.eu-central-1.compute.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-52-57-216-123.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.216.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-eu-central-1a",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-eu-central-1a",
              "Project": "poc"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:internet-gateway/igw-0c89f308e1b819630",
            "id": "igw-0c89f308e1b819630",
            "owner_id": "816069152945",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00484f3159c93d94b",
            "association_id": "eipassoc-0f35962a7c8723514",
            "connectivity_type": "public",
            "id": "nat-0d13f0372900a4296",
            "network_interface_id": "eni-0d80d561ee65700dc",
            "private_ip": "10.0.1.137",
            "public_ip": "52.57.216.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b892142b564cdca",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-eu-central-1a",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-eu-central-1a",
              "Project": "poc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06dc903003f1817881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d13f0372900a4296",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06dc903003f181788",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c89f308e1b819630",
            "id": "r-rtb-0caeb2f3355aef7281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0caeb2f3355aef728",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:route-table/rtb-078759f50d79ef134",
            "id": "rtb-078759f50d79ef134",
            "owner_id": "816069152945",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra",
              "Project": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:route-table/rtb-06dc903003f181788",
            "id": "rtb-06dc903003f181788",
            "owner_id": "816069152945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d13f0372900a4296",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private",
              "Project": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:route-table/rtb-0caeb2f3355aef728",
            "id": "rtb-0caeb2f3355aef728",
            "owner_id": "816069152945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c89f308e1b819630",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public",
              "Project": "poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cc35c59cc6f2a7c",
            "route_table_id": "rtb-078759f50d79ef134",
            "subnet_id": "subnet-016c03f70a9869e3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d53d281e35d66db",
            "route_table_id": "rtb-078759f50d79ef134",
            "subnet_id": "subnet-0b9fd2cb372db11a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c04144e6681d2e75",
            "route_table_id": "rtb-078759f50d79ef134",
            "subnet_id": "subnet-05977cfce7c9d4e24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f94d9d9c688e300",
            "route_table_id": "rtb-06dc903003f181788",
            "subnet_id": "subnet-091d66a95d8e1f0c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c215a5cba57bfc5",
            "route_table_id": "rtb-06dc903003f181788",
            "subnet_id": "subnet-0e0786633c3bfd872"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06169af90513c60ab",
            "route_table_id": "rtb-06dc903003f181788",
            "subnet_id": "subnet-012b56bb773477eac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9169bcac5a2fc6f",
            "route_table_id": "rtb-0caeb2f3355aef728",
            "subnet_id": "subnet-07b892142b564cdca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05377d34088a8947e",
            "route_table_id": "rtb-0caeb2f3355aef728",
            "subnet_id": "subnet-06edf3de4d1f29114"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f56f44c45f3cad98",
            "route_table_id": "rtb-0caeb2f3355aef728",
            "subnet_id": "subnet-0a0452e8e4a7975a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-016c03f70a9869e3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016c03f70a9869e3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1a",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1a",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-0b9fd2cb372db11a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9fd2cb372db11a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1b",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1b",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-05977cfce7c9d4e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05977cfce7c9d4e24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1c",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-intra-eu-central-1c",
              "Project": "poc"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-091d66a95d8e1f0c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091d66a95d8e1f0c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1a",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1a",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-0e0786633c3bfd872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0786633c3bfd872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1b",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1b",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-012b56bb773477eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012b56bb773477eac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1c",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-private-eu-central-1c",
              "Project": "poc",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-07b892142b564cdca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b892142b564cdca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1a",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1a",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-06edf3de4d1f29114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06edf3de4d1f29114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1b",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1b",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:subnet/subnet-0a0452e8e4a7975a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0452e8e4a7975a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069152945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1c",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc-public-eu-central-1c",
              "Project": "poc",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092e3fd85a57ba147"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:816069152945:vpc/vpc-092e3fd85a57ba147",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9921b63571f2afb",
            "default_route_table_id": "rtb-07e6abde61d931c64",
            "default_security_group_id": "sg-0534549f5b150e441",
            "dhcp_options_id": "dopt-02f3bbcf3bf721b31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092e3fd85a57ba147",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e6abde61d931c64",
            "owner_id": "816069152945",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc",
              "Project": "poc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "poc-vpc",
              "Project": "poc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}